[gd_scene load_steps=5 format=2]

[ext_resource path="res://CubeBattle/BattleEngine.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sandbox/Arena.gd" type="Script" id=4]
[ext_resource path="res://CubeBattle/DemonPool.tscn" type="PackedScene" id=6]
[ext_resource path="res://CubeBattle/Character.tscn" type="PackedScene" id=7]

[node name="Arena" type="Node2D"]
position = Vector2( 16, 48 )
script = ExtResource( 4 )

[node name="PlayerA" parent="." instance=ExtResource( 7 )]
position = Vector2( -8, -16 )
character_name = "Player  A"
active = true

[node name="PlayerB" parent="." instance=ExtResource( 7 )]
position = Vector2( 304, -16 )
character_name = "Player B"

[node name="RollA" type="Button" parent="."]
margin_left = 90.1467
margin_top = 245.118
margin_right = 126.147
margin_bottom = 265.118
text = "Roll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExecuteA" type="Button" parent="."]
margin_left = 140.133
margin_top = 245.853
margin_right = 202.133
margin_bottom = 265.853
text = "Execute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RollB" type="Button" parent="."]
margin_left = 290.147
margin_top = 245.118
margin_right = 326.147
margin_bottom = 265.118
text = "Roll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExecuteB" type="Button" parent="."]
margin_left = 340.133
margin_top = 245.118
margin_right = 402.133
margin_bottom = 265.118
text = "Execute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleEngine" parent="." instance=ExtResource( 1 )]

[node name="DemonPool" parent="." instance=ExtResource( 6 )]
position = Vector2( 168, -32 )
